Added options to specify Github Enterprise URL

--- a/src/options.html
+++ b/src/options.html
@@ -1,24 +1,25 @@
-<html>
-<head>
-	<title>Options for Github Peer Review Notifier</title>
-
-</head>
-
-
-<body>
-	<h1>About</h1>
-	This extension is intended to speed up code review process in corporate setting or when working with teams.
-	Faster code review completion means you can go to production (deploy your code) faster.
-	<br/>
-	When we assign review request in Github, the team member gets notified via email but between large no. of emails or other work priorities they often forget to complete code review and we end up having to ask/remind for code review multiple times.
-	<br/>
-	With this extension, team members can see the number of code reviews pending from their side in the notification icon on the browser extension. 
-	Also when a new review-request gets assigned, they will also get a browser notification.
-	<br/>
-	This way they stay reminded that code-reviews are pending from them and they can take action whenever they have some time.
-	<br/>
-	With this extension, teams can get code review completed faster and move to production faster.
-	<br/>
-	<br/> 
-</body>
-</html>
+<!doctype html>
+<meta charset="utf-8">
+<title>Github Code Review Notification</title>
+<link rel="stylesheet" href="options.css">
+<div>
+	<section>
+		<h3>Configure GitHub URLs</h3>
+		<p>
+			Specify base URLs of Github and/or Github Enterprise you want to monitor.
+			To monitor only Github Enterprise, remove the Github URL entry from below input-box.
+		</p>
+		<p>
+			<h4>Github URL</h4>
+			<input type="url" id="github_url_1" placeholder="e.g. https://github.com" value="https://github.com">
+		</p>
+		<p>
+			<h4>GitHub Enterprise URL</h4>
+			<input type="url" id="github_url_2" placeholder="e.g. https://github.your-company.com">
+		</p>
+		<p>
+			<button id="restore_default_urls">Restore Defaults</button>
+		</p>
+	</section>
+</div>
+<script src="options.js"></script>
