--- a/source/options/options.html
+++ b/source/options/options.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
 <title>Github Code Review Notification</title>
-<link rel="stylesheet" href="options.css">
+<link rel="stylesheet" href="./options.css">
 
 
 <form id="options-form">
@@ -27,4 +27,4 @@
 
 
 <script src="browser-polyfill.min.js"></script>
-<script src="options.js"></script>
+<script src="./options.js"></script>
