--- a/source/popup/popup.html
+++ b/source/popup/popup.html
@@ -1,5 +1,13 @@
 <!doctype html>
 <meta charset="utf-8">
 <link rel="stylesheet" href="./popup.css">
-<script src="./popup.js"></script>
-Hello
+
+<div>
+    <span id="github_url_1"></span>
+</div>
+<div>
+    <span id="github_url_2"></span>
+</div>
+
+<script src="../lib/jquery-3.1.0.min.js"></script>
+<script  src="./popup.js" type="module" ></script>
