Fixed bugs and got working version

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -26,5 +26,5 @@
 </p>
 
 
-<!--script src="browser-polyfill.min.js"></script-->
-<script src="./options.js"></script>
+<script src="../browser-polyfill.min.js"></script>
+<script src="./options.js" type="module"></script>
