--- a/source/popup/popup.html
+++ b/source/popup/popup.html
@@ -2,12 +2,16 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="./popup.css">
 
+<div class="container">
+    <h4>Github Code Review Notification</h4>
+    
+    <div class="item">
+        <span id="github_url_1"></span>
+    </div>
+    <div class="item">
+        <span id="github_url_2"></span>
+    </div>
 <div>
-    <span id="github_url_1"></span>
-</div>
-<div>
-    <span id="github_url_2"></span>
-</div>
 
 <script src="../lib/jquery-3.1.0.min.js"></script>
 <script  src="./popup.js" type="module" ></script>
