Added links to github in popup page

--- a/source/popup/popup.html
+++ b/source/popup/popup.html
@@ -7,9 +7,11 @@
     
     <div class="item">
         <span id="github_url_1"></span>
+        <span id="count_github" class="badge"></span>
     </div>
     <div class="item">
         <span id="github_url_2"></span>
+        <span id="count_github_enterprise" class="badge"></span>
     </div>
 <div>
 
