--- a/source/popup/popup.html
+++ b/source/popup/popup.html
@@ -3,7 +3,10 @@
 <link rel="stylesheet" href="./popup.css">
 
 <div class="container">
-    <h4>Github Code Review Notification</h4>
+    <div>
+        <div class="inline-block"><img src="../icons/icon48.png" class="logo" /></div>
+        <div class="inline-block"> <h4> Github Code Review Notification </h4> </div>
+    </div>
     
     <div class="item">
         <span id="github_url_1"></span>
@@ -12,6 +15,10 @@
     <div class="item">
         <span id="github_url_2"></span>
         <span id="count_github_enterprise" class="badge"></span>
+    </div>
+    <br/>
+    <div class="item">
+        <button id="clear_notification">Clear Notification</button>
     </div>
 <div>
 
