--- a/source/popup/popup.html
+++ b/source/popup/popup.html
@@ -7,14 +7,32 @@
         <div class="inline-block"><img src="../icons/icon48.png" class="logo" /></div>
         <div class="inline-block"> <h4> Github Code Review Notification </h4> </div>
     </div>
+
+    <br/>
     
     <div class="item">
         <span id="github_url_1"></span>
         <span id="count_github" class="badge"></span>
+        <span class="tooltip">
+            <span class="tooltiptext">No internet/VPN connectivity</span>
+            <img src="../images/offline.png" class="offline-icon" />
+        </span>
+        <span class="tooltip">
+            <span class="tooltiptext">Not logged in</span>
+            <img src="../images/logged_out.png" class="offline-icon" />
+        </span>
     </div>
     <div class="item">
         <span id="github_url_2"></span>
         <span id="count_github_enterprise" class="badge"></span>
+        <span class="tooltip">
+            <span class="tooltiptext">No internet/VPN connectivity</span>
+            <img src="../images/offline.png" class="offline-icon" />
+        </span>
+        <span class="tooltip">
+            <span class="tooltiptext">Not logged in</span>
+            <img src="../images/logged_out.png" class="offline-icon" />
+        </span>
     </div>
     <br/>
     <div class="item">
