Update latest code

--- a/source/popup/popup.html
+++ b/source/popup/popup.html
@@ -13,11 +13,11 @@
     <div class="item">
         <span id="github_url_1"></span>
         <span id="count_github" class="badge"></span>
-        <span class="tooltip">
+        <span class="tooltip" id="offline_github">
             <span class="tooltiptext">No internet/VPN connectivity</span>
             <img src="../images/offline.png" class="offline-icon" />
         </span>
-        <span class="tooltip">
+        <span class="tooltip" id="logged_out_github">
             <span class="tooltiptext">Not logged in</span>
             <img src="../images/logged_out.png" class="offline-icon" />
         </span>
@@ -25,11 +25,11 @@
     <div class="item">
         <span id="github_url_2"></span>
         <span id="count_github_enterprise" class="badge"></span>
-        <span class="tooltip">
+        <span class="tooltip" id="offline_github_enterprise">
             <span class="tooltiptext">No internet/VPN connectivity</span>
             <img src="../images/offline.png" class="offline-icon" />
         </span>
-        <span class="tooltip">
+        <span class="tooltip" id="logged_out_github_enterprise">
             <span class="tooltiptext">Not logged in</span>
             <img src="../images/logged_out.png" class="offline-icon" />
         </span>
