Re-engineered popup.js rendering

--- a/source/popup/popup.html
+++ b/source/popup/popup.html
@@ -10,26 +10,26 @@
 
     <br/>
     
-    <div class="item">
+    <div class="item" id="container_github_url_1">
         <span id="github_url_1"></span>
-        <span id="count_github" class="badge"></span>
-        <span class="tooltip" id="offline_github">
+        <span id="count_github_url_1" class="badge"></span>
+        <span class="tooltip" id="connection_error_github_url_1">
             <span class="tooltiptext">No internet/VPN connectivity</span>
             <img src="../images/offline.png" class="offline-icon" />
         </span>
-        <span class="tooltip" id="logged_out_github">
+        <span class="tooltip" id="login_error_github_url_1">
             <span class="tooltiptext">Not logged in</span>
             <img src="../images/logged_out.png" class="offline-icon" />
         </span>
     </div>
-    <div class="item">
+    <div class="item" id="container_github_url_2">
         <span id="github_url_2"></span>
-        <span id="count_github_enterprise" class="badge"></span>
-        <span class="tooltip" id="offline_github_enterprise">
+        <span id="count_github_url_2" class="badge"></span>
+        <span class="tooltip" id="connection_error_github_url_2">
             <span class="tooltiptext">No internet/VPN connectivity</span>
             <img src="../images/offline.png" class="offline-icon" />
         </span>
-        <span class="tooltip" id="logged_out_github_enterprise">
+        <span class="tooltip" id="login_error_github_url_2">
             <span class="tooltiptext">Not logged in</span>
             <img src="../images/logged_out.png" class="offline-icon" />
         </span>
