--- a/source/popup/popup.html
+++ b/source/popup/popup.html
@@ -10,7 +10,7 @@
 
     <br/>
     
-    <div class="item" id="container_github_url_1">
+    <div class="item display-none" id="container_github_url_1">
         <span id="github_url_1"></span>
         <span id="count_github_url_1" class="badge"></span>
         <span class="tooltip" id="connection_error_github_url_1">
@@ -22,7 +22,7 @@
             <img src="../images/logged_out.png" class="offline-icon" />
         </span>
     </div>
-    <div class="item" id="container_github_url_2">
+    <div class="item display-none" id="container_github_url_2">
         <span id="github_url_2"></span>
         <span id="count_github_url_2" class="badge"></span>
         <span class="tooltip" id="connection_error_github_url_2">
