Added help note

--- a/source/popup/popup.html
+++ b/source/popup/popup.html
@@ -38,6 +38,9 @@
     <div class="item">
         <button id="clear_notification">Clear Notification</button>
     </div>
+    <div class="note">
+        <p>Note: Additional github accounts can be configured on Extension Options</p>
+    </div>
 <div>
 
 <script src="../lib/jquery-3.1.0.min.js"></script>
